--- a/templates/nginx.conf.j2
+++ b/templates/nginx.conf.j2
@@ -5,8 +5,7 @@ events {
 
 http {
     server {
-        listen  8080 default_server;
-        listen [::]:8080 default_server;
+        listen {{ nginx_listen_port }} default_server;
         server_name  default_server;
         root         /usr/share/nginx/html;
 
